# 154-hippo-framework

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: basic_hippo.rs  multi_asset.rs  trading_strategy.rs
python/: __init__.py  backtest.py  data_loader.py  hippo_model.py  requirements.txt
src/: lib.rs
src/backtest/: engine.rs
src/model/: hippo.rs  mod.rs
src/trading/: mod.rs  signals.rs  strategy.rs
