[package]
name = "hippo_trading"
version = "0.1.0"
edition = "2021"
description = "HiPPO Framework for Cryptocurrency Trading with Bybit"
license = "MIT"
authors = ["ML Trading Team"]

[lib]
name = "hippo_trading"
path = "src/lib.rs"

[[example]]
name = "basic_hippo"
path = "examples/basic_hippo.rs"

[[example]]
name = "multi_asset"
path = "examples/multi_asset.rs"

[[example]]
name = "trading_strategy"
path = "examples/trading_strategy.rs"

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Statistics
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = []
simulation = []
